Color branding changes from CT to ME

--- a/app/assets/stylesheets/_variables.scss.erb
+++ b/app/assets/stylesheets/_variables.scss.erb
@@ -1,13 +1,13 @@
-$mhc-dark-blue:#007bc4;
+$mhc-dark-blue:#487ba2;
 $mhc-blue: #005e81;
 $mhc-darker-blue: #005e81;
 $mhc-dark-gray: #706f6d;
-$mhc-gray: #F0592A;
-$mhc-orange: #F0592A;
+$mhc-gray: #487ba2;
+$mhc-orange: #487ba2;
 $mhc-red: #F7B319;
 $mhc-href:#005e81;
-$mhc-light-gray:#007bc4;
-$mhc-heading-gray:#007bc4;
+$mhc-light-gray:#487ba2;
+$mhc-heading-gray:#487ba2;
 
 
 
@@ -40,7 +40,7 @@ $primary-dark-gray: #7b7b7b;
 $primary-button-text-casing: uppercase;
 $primary-border-radius: .5rem;
 $primary-input-border: 1px solid #b7b7b7;
-$primary-botton-border-bottom:#003260;
+$primary-botton-border-bottom:#3d5d6f;
 $new-style-gray-border: 1px solid #ddd;
 
 $float-labels-text-size: 10px;
@@ -57,7 +57,7 @@ $background-hover: #eeeeee;
 
 $font-family-base: 'arial';
 $headings-font-family: 'Open Sans';
-$headings-color: #333333;
+$headings-color: #487ba2;
 $gray: #4b7c2b;
 $brand-success: #5cb85c;
 $brand_info: #006494;
