--- a/app/assets/stylesheets/bootstrap_overrides.scss.erb
+++ b/app/assets/stylesheets/bootstrap_overrides.scss.erb
@@ -104,7 +104,7 @@ body {
         line-height: 70px;
         padding: 23px 15px;
         font-weight: 600;
-        color: #F0592A;
+        color: #487ba2;
         &:hover {
           background-color: $background-hover;
           text-decoration: none;
@@ -231,11 +231,11 @@ fieldset[disabled] .btn-default.active {
 
 
 .label-info {
-  background-color: #007bc4;
+  background-color: #487ba2;
 }
 .label-info[href]:hover,
 .label-info[href]:focus {
-  background-color: #007bc4;
+  background-color: #487ba2;
 }
 
 .label-danger {
