--- a/app/assets/stylesheets/custom.scss.erb
+++ b/app/assets/stylesheets/custom.scss.erb
@@ -34,7 +34,7 @@ h1, h2, h3, h4, h5, h6
 
 .navbar-white {
     background-color: #fff;
-    border-bottom: 3px solid #007bc4;
+    border-bottom: 3px solid #487ba2;
     min-height: 73px;
 }
 
@@ -68,7 +68,7 @@ ul.brd-left li:first-child {
 }
 
 a {
-    color: #007BC4;
+    color: #487ba2;
     transition: all 0.3s ease 0s;
 }
 .full {
@@ -155,7 +155,7 @@ a {
 .navbar-toggle {margin-top: 18px; margin-bottom: 18px;}
 
 .social.aktif{
-  background-color: #007bc4;
+  background-color: #487ba2;
 }
 .social.border{
   border-left: 1px solid #bbbbbb;
@@ -369,7 +369,7 @@ a.btn.add{
 }
 .welcome ul.status li a{
   font-size: 14px;
-  color : #333333;
+  color : #487ba2;
 }
 .welcome ul.status li{
   font-size: 12px !important;
@@ -1422,14 +1422,14 @@ a.close-1, a.close-2{
     &.form-action {
       margin: 8px 0 20px;
       display: inline-block;
-      color: #007bc4;
+      color: #487ba2;
       font-size: 14px;
       font-weight: bold;
       border-radius: 4px;
       border: solid 1px #b2b2b2;
       background-color: transparent;
       &:hover {
-        border: solid 1px #007bc4;
+        border: solid 1px #487ba2;
         background-color: #ffffff;
       }
     }
@@ -2410,7 +2410,7 @@ ul.navbar-nav.top-menu li {
 }
 
 #profile-content .panel .info-wrapper h3 {
-    color: #007bc4;
+    color: #487ba2;
     font-weight: bold;
     margin-top: 0;
     text-transform: uppercase;
@@ -3136,7 +3136,7 @@ p.success-text {
 ul.pagination {
     padding: 0px 5px;
     border-radius: 2px;
-    background:#003260;
+    background:#3d5d6f;
 }
 .pagination>li:last-child>a, .pagination>li:last-child>span, .pagination>li:first-child>a, .pagination>li:first-child>span{
     border-radius: 0px;
@@ -3444,8 +3444,8 @@ table.table-wrapper a.btn {
 .search-wp .input-group span.input-group-btn button {
     color: #000;
     border-radius: 0px;
-    background: #007bc4;
-    border-color: #007bc4;
+    background: #487ba2;
+    border-color: #487ba2;
     color: #ffffff;
 }
 .title-dropdown .form-control {
@@ -3608,7 +3608,7 @@ table.table tr.gray-row {background-color: ivory;}
 /* Footer */
 
 .form-wrapper h3 {
-    color: #003260;
+    color: #3d5d6f;
     font-size: 18px;
     font-weight: 300;
     margin-bottom: 15px;
@@ -3647,12 +3647,12 @@ span.circle-progress {
 ul.progress-wrapper li.complete {
     padding: 5px 0px;
     list-style: none;
-    /*border-left: 2px solid #007bc4;*/
+    /*border-left: 2px solid #487ba2;*/
     padding-left: 35px;
-    color: #007bc4;
+    color: #487ba2;
 }
 ul.progress-wrapper li.complete span.circle-progress {
-    background-color: #007bc4;
+    background-color: #487ba2;
     border: none;
     width: 14px;
     left: 9px;
@@ -3661,14 +3661,14 @@ ul.progress-wrapper li.complete span.circle-progress {
 ul.progress-wrapper li.active {
     padding: 5px 0px;
     list-style: none;
-    /*border-left: 2px solid #007bc4;*/
+    /*border-left: 2px solid #487ba2;*/
     padding-left: 35px;
     font-weight: bold;
-    color: #007bc4;
+    color: #487ba2;
 }
 ul.progress-wrapper li.active span.circle-progress {
     background-color: #ffffff;
-    border: 2px solid #007bc4;
+    border: 2px solid #487ba2;
     width: 14px;
     left: 9px;
     height: 14px;
@@ -3683,7 +3683,7 @@ ul.progress-wrapper li.active span.circle-progress {
     margin-top: 5px;
 }
 ul.progress-wrapper li.complete .vertical-line-progress {
-    background-color: #007bc4;
+    background-color: #487ba2;
 }
 ul.progress-wrapper li.active .vertical-line-progress {
     background-color: #cacaca;
@@ -3819,7 +3819,7 @@ ul.list-right-section li a img {
 
 
 .my-account-page h1{
-    color: #003260;
+    color: #3d5d6f;
     font-size: 36px;
     margin-bottom: 10px;
     margin-top: 0;
@@ -3834,13 +3834,13 @@ ul.list-right-section li a img {
   margin-bottom: 0;
 }
 .row-form-wrapper.active {
-  box-shadow: 0px 0px 0px 3px #007bc4 inset;
+  box-shadow: 0px 0px 0px 3px #487ba2 inset;
   z-index: 1;
   position: relative;
 }
 .row-form-wrapper.active::before {
     border-bottom: 8px solid transparent;
-    border-right: 8px solid #007bc4;
+    border-right: 8px solid #487ba2;
     border-top: 8px solid transparent;
     content: "";
     height: 0;
@@ -3985,7 +3985,7 @@ h3.text-blue {
     font-weight: 500;
 }
 .text-blue {
-    color: #007bc4;
+    color: #487ba2;
     font-weight: 300;
 }
 #select_plan_wrapper .panel ul.list-comp li {
@@ -4094,7 +4094,7 @@ span.badge.message-badge {
     padding: 15px;
 }
 .plan-year-wrapper .dropdown button span.glyphicon {
-    color: #007bc4;
+    color: #487ba2;
     font-size: 13px;
     padding-left: 10px;
 }
@@ -4220,7 +4220,7 @@ table.table.table-message-wrapper tr th.vtop {
   display: none;
 }
 .agency-selected {
-  border: 1px solid #007bc4;
+  border: 1px solid #487ba2;
 }
 .list-group a.sidebar-employer-field {
   color: #fff;
@@ -4306,7 +4306,7 @@ span.text_style {color: #616161 !important;}
 }
 
 .btn-select {
-    background-color: #007bc4;
+    background-color: #487ba2;
     border-color: #004872;
     color: #fff;
 }
@@ -4477,7 +4477,7 @@ span.text_style {color: #616161 !important;}
   vertical-align: middle;
 }
 .ct-1 h2 {
-    color: #003260;
+    color: #3d5d6f;
     font-weight: 100;
     margin-top: 0;
     line-height: 100%;
@@ -4618,7 +4618,7 @@ table.table.table-no-sytle td {
 }
 
 .carousel-control .fa {
-  color:#003260;
+  color:#3d5d6f;
   position: absolute;
   top: 35%;
   z-index: 5;
@@ -4717,7 +4717,7 @@ position: absolute;
   margin-right: 20px;
 }
 #shop-for-plans-widget .btn, .employer-panel .btn {
-  color: #007BC4;
+  color: #487ba2;
   font-weight: 600;
 }
 
