--- a/app/assets/stylesheets/effective_datatable.scss.erb
+++ b/app/assets/stylesheets/effective_datatable.scss.erb
@@ -40,7 +40,7 @@
   }
 
   .dt-buttons > div > button.btn-default{
-    color: #007bc4 !important;
+    color: #487ba2 !important;
   }
 
   .form-control{
