--- a/app/assets/stylesheets/text_styles.scss.erb
+++ b/app/assets/stylesheets/text_styles.scss.erb
@@ -1,9 +1,9 @@
 @import "variables";
 .blue {
-  color: #007bc4;
+  color: #487ba2;
 }
 .darkblue {
-  color: #003260;
+  color: #3d5d6f;
 }
 .lg {
   color: #7b7b7b;
