--- a/app/javascript/css/main.scss
+++ b/app/javascript/css/main.scss
@@ -8,7 +8,7 @@
   margin-top:30px;
   margin-left:auto;
   margin-right:auto;
-  border: 1px solid #F0592A;
+  border: 1px solid #487ba2;
 }
 
 body {
