--- a/components/sponsored_benefits/app/assets/stylesheets/sponsored_benefits/_variables.scss
+++ b/components/sponsored_benefits/app/assets/stylesheets/sponsored_benefits/_variables.scss
@@ -1,8 +1,8 @@
-$mhc-dark-blue:#003260;
-$mhc-blue: #247dc5;
+$mhc-dark-blue:#3d5d6f;
+$mhc-blue: #3d5d6f;
 $mhc-dark-gray: #706f6d;
 $mhc-gray: #6d6e70;
-$mhc-orange: #333333;
+$mhc-orange: #487ba2;
 $mhc-red: #812200;
 
 $primary-orange: $mhc-orange;
