--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -25,7 +25,7 @@
    margin-top:30px;
    margin-left:auto;
    margin-right:auto;
-   border: 1px solid #F0592A;
+   border: 1px solid #487ba2;
  }
 
  .content {
@@ -217,11 +217,11 @@ img {
  }
 .consumer_roles {
   .fa {
-    color: #007bc4;
+    color: #487ba2;
   }
 }
 .fa-question-circle {
-    color: #007bc4;
+    color: #487ba2;
 }
 
 
