--- a/app/assets/stylesheets/insured.scss.erb
+++ b/app/assets/stylesheets/insured.scss.erb
@@ -452,9 +452,9 @@
 										font-size: 12px;
 										color: #b7b7b7;
 										&:hover {
-											color: #007bc4;
+											color: #487ba2;
 											* {
-												color: #007bc4;
+												color: #487ba2;
 											}
 										}
 									}
@@ -527,12 +527,12 @@
 }
 
 .run-glossary .popover {
-  background-color: #003260;
+  background-color: #3d5d6f;
   color: white;
   max-width: 350px;
   .arrow { display: none; }
   .popover-title {
-    background-color: #003260;
+    background-color: #3d5d6f;
     border-bottom: none;
     color: white;
     font-weight: bold;
@@ -564,11 +564,11 @@
 }
 
 span.glossary {
-  border-bottom: 1px dashed #007bc4;
+  border-bottom: 1px dashed #487ba2;
 }
 span.glossary:hover {
   cursor: pointer;
-  color: #007bc4;
+  color: #487ba2;
 }
 
 .mt-label{
