--- a/app/assets/stylesheets/ui-components/jquery-ui.scss.erb
+++ b/app/assets/stylesheets/ui-components/jquery-ui.scss.erb
@@ -902,19 +902,19 @@ body .ui-tooltip {
 .ui-widget-content {
   border: 1px solid #dddddd;
   background: #ffffff;
-  color: #333333;
+  color: #487ba2;
 }
 .ui-widget-content a {
-  color: #333333;
+  color: #487ba2;
 }
 .ui-widget-header {
   border: 1px solid #dddddd;
   background: #e9e9e9;
-  color: #333333;
+  color: #487ba2;
   font-weight: bold;
 }
 .ui-widget-header a {
-  color: #333333;
+  color: #487ba2;
 }
 
 /* Interaction states
