--- a/app/javascript/css/theme.scss
+++ b/app/javascript/css/theme.scss
@@ -1,5 +1,5 @@
 .btn-outline-primary {
-  @include button-outline-variant($dc-alt-blue, $dc-alt-blue, lighten($white, 5%), $dc-alt-blue);
+  @include button-outline-variant(#647f3a, #647f3a, lighten($white, 5%), $dc-alt-blue);
   font-weight: 600;
   text-transform: capitalize;
 }
@@ -14,7 +14,7 @@
 
 .heading-text {
   font-weight: 400;
-  color: $dc-dark-blue;
+  color: #487ba2;
 }
 
 .invalid-feedback {
@@ -66,7 +66,7 @@
 // preprod environment
 .pre_prod_nav_color {
   color: white !important;
-  background-color: #003260 !important;
+  background-color: #3d5d6f !important;
 
    .call-customer-service {
     color: white !important;
