--- a/app/javascript/css/variables.scss
+++ b/app/javascript/css/variables.scss
@@ -4,14 +4,14 @@ $dc-red: #D22630;
 $white: #ffffff;
 // Secondary Colors
 $dc-organge: #EAA000;
-$dc-dark-blue: #003260;
+$dc-dark-blue: #3d5d6f;
 $dc-dark-gray: #5C5C5C;
 $dc-dark-red: #b7191b;
 $dc-gray: #949A90;
 $dc-lime-green: #C4D600;
 $dc-khaki-brown: #CEB888;
 $dc-secondary-blue: #0086BF;
-$dc-alt-blue: #007BC4;
+$dc-alt-blue: #487ba2;
 $dc-alt-gray: #d7d7d7;
 $dc-alt-gray-2: #b7b7b7;
 $medium-gray: #f2f2f2;
