--- a/app/views/insured/families/_qles_carousel.html.erb
+++ b/app/views/insured/families/_qles_carousel.html.erb
@@ -51,10 +51,10 @@
     </ol>
 
     <!-- Controls -->
-    <a class="left carousel-control" href="#carousel-qles" role="button" data-slide="prev" style='background-image: none;color:#007bc4;'>
+    <a class="left carousel-control" href="#carousel-qles" role="button" data-slide="prev" style='background-image: none;color:#487ba2;'>
       <i class="fa fa-angle-left left fa-2x" aria-hidden="true"></i>
     </a>
-    <a class="right carousel-control" href="#carousel-qles" role="button" data-slide="next" style='background-image: none;color:#007bc4;'>
+    <a class="right carousel-control" href="#carousel-qles" role="button" data-slide="next" style='background-image: none;color:#487ba2;'>
       <i class="fa fa-angle-right right fa-2x" aria-hidden="true"></i>
     </a>
   <% end %>
