--- a/app/views/exchanges/bulk_notices/_summary_line.html.erb
+++ b/app/views/exchanges/bulk_notices/_summary_line.html.erb
@@ -1,6 +1,6 @@
 <% bulk_notice ||= @bulk_notice %>
 <% org ||= session[:bulk_notice].try(:[], :audience).try(:[], id) %>
-<% org ||= BenefitSponsors::Organizations::Organization.find(id).attributes.symbolize_keys.slice(id, :fien, :hbx_id, :legal_name) %>
+<% org ||= BenefitSponsors::Organizations::Organization.find(id).attributes.symbolize_keys.slice(id, :fein, :hbx_id, :legal_name) %>
 <% result = bulk_notice.results.where(audience_id: id).first %>
 <div id='<%= "bulk-notice-#{bulk_notice.id}-audience-#{id}" %>' class='row summary-row px-3 bg-white border-left border-right' data-audience-id='<%= id %>'>
   <div class='col-4'>
