Fix summary when there are file attachments

--- a/app/views/exchanges/bulk_notices/summary.html.erb
+++ b/app/views/exchanges/bulk_notices/summary.html.erb
@@ -40,7 +40,7 @@
       <div class='col-10 p-3'>
         <% @bulk_notice.documents.each_with_index do |document, i| %>
           <div class='py-1'>
-            <span><%= document.title %>&nbsp;<a data-action='bulk-notice#deleteFile' href>
+            <span><%= document.title %></span>
           </div>
         <% end %>
       </div>
