--- a/app/views/products/qhp/summary.html.erb
+++ b/app/views/products/qhp/summary.html.erb
@@ -1,1 +1,3 @@
-<%= render partial: "shared/summary", locals: {qhp: @qhp} %>
+<div id="plan-summary" style="margin-top: 30px;">
+  <%= render partial: "ui-components/v1/cards/summary", locals: {qhp: @qhp} %>
+</div>
