--- a/app/views/exchanges/bulk_notices/_recipient_badge.html.erb
+++ b/app/views/exchanges/bulk_notices/_recipient_badge.html.erb
@@ -1,4 +1,4 @@
-<span class="badge badge-secondary mr-1 mb-1 p-2" data-target="bulk-notice.recipientBadge">
+<span class="badge badge-alt-blue mr-1 mb-1 p-2" data-target="bulk-notice.recipientBadge">
   <%= hidden_field_tag 'admin_bulk_notice[audience_ids][]', id %>
   <%= hbx_id %>
   <a data-action='bulk-notice#deleteIdentifier' class='text-white' href>
