Access Health CT to Cover ME

--- a/app/views/insured/group_selection/new.html.erb
+++ b/app/views/insured/group_selection/new.html.erb
@@ -56,10 +56,10 @@
                     <div class="modal-content">
                       <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                        <h4 class="modal-title" id="myModalLabel">Some people are eligible for Access Health CT</h4>
+                        <h4 class="modal-title" id="myModalLabel">Some people are eligible for Cover ME</h4>
                       </div>
                       <div class="modal-body">
-                        This group includes people who are eligible to enroll in a plan through Access Health CT. If you choose to enroll these people in a plan through Cover All CT, they will:
+                        This group includes people who are eligible to enroll in a plan through Cover ME. If you choose to enroll these people in a plan through Cover All CT, they will:
                         <ul>
                           <li>
                             not get a Form 1095-A at tax time.
@@ -68,7 +68,7 @@
                             not qualify for cost savings like the advance premium tax credit.
                           </li>
                         </ul>
-                        <strong>You can enroll these people in the same plan through Access Health CT separately.</strong>
+                        <strong>You can enroll these people in the same plan through Cover ME separately.</strong>
                       </div>
                       <div class="modal-footer">
                         <button type="button" class="btn btn-default modal-cancel-button" data-dismiss="modal">close</button>
