--- a/app/views/insured/plan_shoppings/receipt.en.html.erb
+++ b/app/views/insured/plan_shoppings/receipt.en.html.erb
@@ -87,7 +87,7 @@
                 <li>
                   <% if show_pay_now? %>
                     You must pay your first month’s premium directly to Kaiser Permanente to activate your
-                    coverage. Access Health CT does not collect premium payments.<br/><br/>
+                    coverage. Cover ME does not collect premium payments.<br/><br/>
                     There are two ways to pay your first month’s premium and activate your coverage:
                     <br/>
                     <br/>
@@ -279,14 +279,14 @@
             It’s only available to make your first payment.
           </li>
           <li>The information that Kaiser Permanente collects and maintains as a result of your visit to its website is
-            different from the information that Access Health CT collects and maintains.
+            different from the information that Cover ME collects and maintains.
           </li>
-          <li>Access Health CT cannot help you with any information regarding this website, including your username or
+          <li>Cover ME cannot help you with any information regarding this website, including your username or
             password, or other technical issues.
           </li>
           <br/>
         </ul>
-        By linking to this private business, Access Health CT is not endorsing its products, services, or privacy or
+        By linking to this private business, Cover ME is not endorsing its products, services, or privacy or
         security policies. We recommend you review the business's information collection policy or terms and conditions
         to fully understand what information is collected by Kaiser Permanente.
         </p>
@@ -296,7 +296,7 @@
           <input type="hidden" name="SAMLResponse" value="response" id="sp"/>
           <input type="hidden" name="RelayState" value=<%= @kp_relay_state %>/>
           <button type="submit" class="btn btn-primary pull-right sp interaction-click-control-print-purchase-confirmation" id="pay-now" value="<%= @enrollment.hbx_id %>">
-            Leave Access Health CT
+            Leave Cover ME
           </button>
         </form>
         <button type="button" class="btn btn-default pull-left" data-dismiss="modal">GO BACK</button>
