--- a/app/views/notices/shared/ivl_tax_header.html.erb
+++ b/app/views/notices/shared/ivl_tax_header.html.erb
@@ -31,7 +31,7 @@
               continue;
             }
           }
-        y[j].textContent = "Your Access Health CT ID is: " + "\xA0\xA0\xA0\xA0\xA0\xA0\xA0\xA0\xA0\xA0\xA0\xA0\xA0\xA0\xA0\xA0\xA0\xA0\xA0\xA0\xA0\xA0\xA0\xA0\xA0\xA0\xA0\xA0" + "| Page "+(vars[x[i]]-2)+ " of " + (vars[x[1]]-2);
+        y[j].textContent = "Your Cover ME ID is: " + "\xA0\xA0\xA0\xA0\xA0\xA0\xA0\xA0\xA0\xA0\xA0\xA0\xA0\xA0\xA0\xA0\xA0\xA0\xA0\xA0\xA0\xA0\xA0\xA0\xA0\xA0\xA0\xA0" + "| Page "+(vars[x[i]]-2)+ " of " + (vars[x[1]]-2);
         }
       }
     }
