--- a/app/assets/stylesheets/custom.scss.erb
+++ b/app/assets/stylesheets/custom.scss.erb
@@ -9,7 +9,7 @@ html {
 }
 
 body {
-    background-color: #f2f2f2;
+    background-color: #f2f2f2 !important;
     min-height: 100%;
     position: relative;
     padding-bottom: 70px;
