--- a/app/assets/stylesheets/ui-components/mahc-theme.scss
+++ b/app/assets/stylesheets/ui-components/mahc-theme.scss
@@ -26,7 +26,7 @@ html {
 }
 
 body {
-  background-color: $primary-light-gray;
+  background-color: #f2f2f2 !important;
   padding-bottom: 70px;
   font-size: 14px;
   line-height: 1.42857143;
