DC to ME text changes

--- a/app/views/broker_agencies/broker_roles/confirmation.html.erb
+++ b/app/views/broker_agencies/broker_roles/confirmation.html.erb
@@ -14,7 +14,7 @@
       <div class="col-sm-11">
         <p><strong>Secure Carrier Appointments:</strong><br/>
           To become a Cover ME Registered Broker, you must obtain appointments with each carrier's licensed
-          entities in D.C. for the market in which you intend to sell. This resolution was made by the DC Health Benefit
+          entities in ME for the market in which you intend to sell. This resolution was made by the ME Health Benefit
           Exchange Authority's Producer Advisory Committee. The
           <a href="http://hbx.dc.gov/sites/default/files/dc/sites/Health%20Benefit%20Exchange%20Authority/publication/attachments/ProducerAdvisoryCommitteeFINALReport.pdf" target="_blank">Producer
             Advisory Committee's resolution</a> provides additional context on the requirements.
@@ -109,7 +109,7 @@
         <p><strong>Complete the Cover ME Broker Policy Training Course:</strong><br/>
         <ul>
           <li>Go to the
-            <a href="https://nahu.inreachce.com/Details?resultsPage=1&sortBy=&q=dc+broker&searchType=1&groupId=154ae22b-92eb-41f0-854b-3a9cabc20c8e" target="_blank">DC
+            <a href="https://nahu.inreachce.com/Details?resultsPage=1&sortBy=&q=dc+broker&searchType=1&groupId=154ae22b-92eb-41f0-854b-3a9cabc20c8e" target="_blank">ME
               Health Link training</a> administered by NAHU
           </li>
           <li>Create a login</li>
