--- a/app/views/exchanges/hbx_profiles/_view_hbx_enrollments.html.erb
+++ b/app/views/exchanges/hbx_profiles/_view_hbx_enrollments.html.erb
@@ -16,7 +16,7 @@
                 <th>Termination <br/> Date</th>
                 <th>Reinstate Effective<br/> Date</th>
                 <th>Transmit <br /> Carrier EDI?</th>
-                <th>DC Health<br/> Link ID</th>
+                <th>ME Health<br/> Link ID</th>
                 <th></th>
               </tr>
               </thead>
