--- a/app/views/insured/families/verification/_documents_verification_list.en.html.erb
+++ b/app/views/insured/families/verification/_documents_verification_list.en.html.erb
@@ -4,17 +4,17 @@
   <li>Social Security Card</li>
 </ul>
 
-<h4><b>DC Residency:</b></h4>
-<p>Documents you can use to verify DC residency include:</p>
+<h4><b>ME Residency:</b></h4>
+<p>Documents you can use to verify ME residency include:</p>
 <ul>
-  <li>A copy of an active lease agreement, certified deed, or mortgage statement with DC address</li>
+  <li>A copy of an active lease agreement, certified deed, or mortgage statement with ME address</li>
   <li>A phone or utility bill from within the past two months</li>
-  <li>DC voter registration card</li>
-  <li>A valid District of Columbia motor vehicle registration or DC DMV identification card</li>
+  <li>ME voter registration card</li>
+  <li>A valid Maine motor vehicle registration or ME DMV identification card</li>
   <li>Cancelled checks or receipts for mortgage or rental payments on a residential property within the past 2 months</li>
-  <li>Utility bills with a DC address, and payment receipts within the past 2 months</li>
-  <li>Proof of automobile insurance showing the person’s DC residency address</li>
-  <li>A signed DC Department of Motor Vehicles proof of residency form from another District resident stating that the applicant lives at their address in the District. (available at: <a href= "https://dmv.dc.gov/page/proof-dc-residency-certifications", target= "_blank">https://dmv.dc.gov/page/proof-dc-residency-certifications</a>)</li>
+  <li>Utility bills with a ME address, and payment receipts within the past 2 months</li>
+  <li>Proof of automobile insurance showing the person’s ME residency address</li>
+  <li>A signed ME Department of Motor Vehicles proof of residency form from another District resident stating that the applicant lives at their address in the District. (available at: <a href= "https://dmv.dc.gov/page/proof-dc-residency-certifications", target= "_blank">https://dmv.dc.gov/page/proof-dc-residency-certifications</a>)</li>
   <li>Self-attestation of residency without paper documentation in exceptional circumstances, including homelessness and in cases of domestic violence</li>
 </ul>
 
