--- a/app/views/exchanges/employer_applications/_reinstate_benefit_application_modal.html.erb
+++ b/app/views/exchanges/employer_applications/_reinstate_benefit_application_modal.html.erb
@@ -3,7 +3,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <!-- <h4 class="modal-title">Confirm Reinstate Plan Year</h4> -->
+        <h4 class="modal-title">Confirm Reinstate Plan Year</h4>
       </div>
       <div class="modal-body">
         <h4>Plan Year will be Reinstated</h4>
