add operation to fetch all available roles for a person

--- a/app/views/accounts/_available_accounts.html.erb
+++ b/app/views/accounts/_available_accounts.html.erb
@@ -7,7 +7,7 @@
         <p class="mt-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et aliqua..</p>
       </div>
       <div class="col-2 p-3">
-        <%= link_to "Add Portal", new_portal_path(id: current_user&.person&.id, profile_type: :benefit_sponsor) , class: "btn btn-outline-primary pull-right mt-3" %>
+        <%= link_to "Add Portal", new_account_path(id: current_user&.person&.id, profile_type: :benefit_sponsor) , class: "btn btn-outline-primary pull-right mt-3" %>
       </div>
     </div>
   </div>
