--- a/app/views/people/show_roles.html.erb
+++ b/app/views/people/show_roles.html.erb
@@ -7,5 +7,5 @@
 
   <p> Add additional roles or quickly jump to a portage using the links below. </p>
 
-  <%= render partial: 'portals/my_portals' %>
+  <%= render partial: 'people/person_roles' %>
 </div>
