--- a/app/views/accounts/new.html.erb
+++ b/app/views/accounts/new.html.erb
@@ -5,7 +5,7 @@
 <div class="documents-tab" style="padding-top: 0px !important;">
   <div class=" container personal-info-container no-pd">
     <%= form_for @agency, as: :agency, url: {action: "create"},  html: { class: "needs-ajax-validation s508", novalidate:true } do |f| %>
-      <%= render partial: 'portals/profile_form', locals: {f: f} %>
+      <%= render partial: 'accounts/profile_form', locals: {f: f} %>
     <% end %>
   </div>
 
