--- a/app/views/ui-components/v1/navs/_manage_account.html.slim
+++ b/app/views/ui-components/v1/navs/_manage_account.html.slim
@@ -1,8 +1,8 @@
 nav
   ul#uic-families-right-menu
     li
-      = link_to 'Home', main_app.manage_account_person_path(id: current_user&.person.id)
+      = link_to 'Home', main_app.manage_account_person_path(id: @person.id)
     li
-      = link_to 'Personal Info', main_app.personal_info_person_path(id: current_user&.person&.id)
+      = link_to 'Personal Info', main_app.personal_info_person_path(id: @person.id)
     li
-      = link_to 'My Portals', main_app.portals_path(id: current_user&.person&.id)
+      = link_to 'My Portals', main_app.show_roles_person_path(id: @person.id)
