--- a/app/views/exchanges/employer_applications/_reinstate_benefit_application_modal.html.erb
+++ b/app/views/exchanges/employer_applications/_reinstate_benefit_application_modal.html.erb
@@ -3,13 +3,12 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title">Confirm Reinstate Plan Year</h4>
       </div>
       <div class="modal-body">
-        <h4>Plan Year will be Reinstated</h4>
+        <h4>Would you like to reinstate the plan year?</h4>
       </div>
       <div class="modal-footer">
-        <%= link_to "Continue", exchanges_employer_application_reinstate_path(application.benefit_sponsorship, application), method: :put, remote: true, class: "btn btn-primary mtz  btn-small"%>
+        <%= link_to "Continue", exchanges_employer_application_reinstate_path({employer_application_id: application.id, employer_id: application.benefit_sponsorship.id}), method: :put, remote: true, class: "btn btn-primary mtz  btn-small"%>
         <span class="btn btn-default btn-small" data-dismiss="modal">Cancel</span>
       </div>
     </div>
