--- a/app/views/insured/families/_shop_for_plans_widget.html.erb
+++ b/app/views/insured/families/_shop_for_plans_widget.html.erb
@@ -106,7 +106,7 @@
               <% end %>
 
               <% if @employee_role&.can_enroll_as_new_hire? && (@employee_role.is_under_open_enrollment? || @employee_role.is_under_off_cycle_open_enrollment?) && @employee_role.can_get_coverage_under_current_py? %>
-                <% options.merge!(dual_oe: true)
+                <% options.merge!(dual_oe: true) %>
                 <p>If you <%= link_to 'enroll as new hire', new_insured_group_selection_path(options) %> coverage will begin <%= format_date @employee_role.earliest_effective_on_for_new_hire_in_current_py %>.</p>
               <% end %>
 
