91013: PY Reinstate - Page Alignment

--- a/app/views/exchanges/employer_applications/_index.html.erb
+++ b/app/views/exchanges/employer_applications/_index.html.erb
@@ -2,8 +2,8 @@
   
 </style>
 
-<div class="container" id="employer_applications_table">
-  <div class = "table-responsive table-override"> 
+<div class="container bottom-pd" id="employer_applications_table">
+  <div class = "table-override">
   <h4 class="text-center heading-text"> <%= l10n("exchange.employer_applications.applications").titleize %> </h4>
   <% benefit_applications = @benefit_sponsorship.benefit_applications %>
   <% if benefit_applications.present? %>
