added safe navigator

--- a/app/views/insured/families/_shop_for_plans_widget.html.erb
+++ b/app/views/insured/families/_shop_for_plans_widget.html.erb
@@ -97,7 +97,7 @@
                 <% if @employee_role.present? && @employee_role.census_employee.is_employee_in_term_pending? %>
                 <% else %>
                   <% if @employee_role.present? && @employee_role.try(:is_under_open_enrollment?) %>
-                    <% new_options = @employee_role.has_multiple_shop_oe_periods? ? options.merge(shop_under_future: true) : options %>
+                    <% new_options = @employee_role&.has_multiple_shop_oe_periods? ? options.merge(shop_under_future: true) : options %>
                     <p>If you <%= link_to 'enroll today', new_insured_group_selection_path(new_options) %>, coverage will begin <%= format_date @employee_role.benefit_begin_date %>.</p>
                   <%elsif (@person.consumer_role.present? || @person.resident_role.present?) && is_under_open_enrollment? %>
                     <p>If you <%= link_to 'enroll today', new_insured_group_selection_path(options) %>, coverage will begin <%= format_date ivl_enrollment_effective_date %>.</p>
@@ -105,7 +105,7 @@
                 <% end %>
               <% end %>
 
-              <% if @employee_role.has_multiple_shop_oe_periods? %>
+              <% if @employee_role&.has_multiple_shop_oe_periods? %>
                 <p>If you <%= link_to 'enroll as new hire', new_insured_group_selection_path(options.merge(shop_under_current: true)) %> coverage will begin <%= format_date @employee_role.earliest_effective_on_for_new_hire_in_current_py %>.</p>
               <% end %>
 
