--- a/app/views/ui-components/v1/forms/portals/_person_staff_role_information.html.slim
+++ b/app/views/ui-components/v1/forms/portals/_person_staff_role_information.html.slim
@@ -40,6 +40,31 @@ legend Personal Information
     .invalid-feedback
       |
             Please provide a valid number.
+  .col-md-3.col-sm-3
+    label  coverage *
+    = select_tag "people", options_for_select(['Yes', 'No']), include_blank: '', required: 'true', id: 'inputCoverage' , class: 'form-control', :onchange => 'isApplyingCoverage(this)'
+    .invalid-feedback
+      |
+            Please provide a valid number.
+.row.mt-1
+  .col-md-3.col-sm-3
+    label#labelSsn.hidden for="inputSsn"  SSN *
+    = f.text_field :number, placeholder:'111-11-1111', required:'true', id:'inputSsn', class:'form-control hidden', minlength: '7',maxlength:'7'
+    .invalid-feedback
+      |
+            Please provide a valid number.
+  .col-md-3.col-sm-3
+    label#labelGender.hidden for="inputGender"  Gender *
+    = f.text_field :number, placeholder: 'male/female', required: 'true', id: 'inputGender', class: 'form-control hidden', minlength: '7', maxlength: '7'
+    .invalid-feedback
+      |
+            Please provide a valid number.
+  /.col-md-3.col-sm-3
+  /  label for="inputAddress"  address *
+  /  = render 'ui-components/v1/forms/portals/portal_address.html.erb', f: personF
+  /  .invalid-feedback
+  /    |
+  /          Please provide a valid number.
 
 javascript:
 
@@ -56,5 +81,19 @@ javascript:
         icon: "warning"
       }),
         element.value = ''
+    }
+  }
+
+  function isApplyingCoverage(element) {
+    if (element.value === "Yes") {
+      $("#labelSsn").removeClass("hidden");
+      $("#labelGender").removeClass("hidden");
+      $("#inputSsn").removeClass("hidden");
+      $("#inputGender").removeClass("hidden");
+    } else {
+      $("#labelSsn").addClass("hidden");
+      $("#labelGender").addClass("hidden");
+      $("#inputSsn").addClass("hidden");
+      $("#inputGender").addClass("hidden");
     }
   }
